--- a/final/index.html
+++ b/final/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/responsive-nav.css" media="all">
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/responsive-nav.js"></script>
     <!--[if lt IE 9]>
@@ -25,22 +25,52 @@
             <nav class="nav-collapse">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="AssignmentControllingType/Act.html">Action</a></li>
-                    <li><a href="AssignmentControllingType/Com.html">Comedy</a></li>
-                    <li><a href="AssignmentControllingType/Rom.html">Romance</a></li>
-                    <li><a href="AssignmentControllingType/SF.html">SiFI</a></li>
+                    <li><a href="AssignmentControllingType/Act.html">Film</a></li>
+                    <li><a href="AssignmentControllingType/Com.html">Director</a></li>
+                    <li><a href="AssignmentControllingType/Rom.html">Schedule</a></li>
+                    <li><a href="AssignmentControllingType/SF.html">Registration & Tickets</a></li>
+                    <li><a href="AssignmentControllingType/SF.html">Information</a></li>
                 </ul>
             </nav>
         </header>
         <div>
-            <h3>Welcom to 20-1 Animation Festival</h3>
-            <h3> Nov/15 2016 - Nov/25 2016</h3>
             <br>
+            <br>
+            <h1>Welcom to 1ST 20-1 Animation Festival</h1>
+            <br>
+            <div class="home">
+                <iframe width="560" height="345" src="https://www.youtube.com/embed/SSv2VRmk5TQ?rel=0&autoplay=1" frameborder="0" allowfullscreen class="video"></iframe>
+                <div class="HPN">
+                    <h2>Eve's Info</h2>
+                    <h3>Join the New York Philharmonic this New Year’s Eve for La Vie Parisienne, a musical love letter to Paris. Featuring the Philharmonic and special guests in some of France’s greatest creations — “La Vie en rose,” Saint-Saëns’s Carnival of the Animals, Offenbach’s Can-Can, and much more — conducted by Alan Gilbert.</h3>
+                </div>
+            </div>
+            <br>
+            <br>
+
+            <div class="hm1">
+                <h3>Location</h3>
+                <h2>David Geffen Hall</h2>
+            </div>
+            <div class="hm2">
+                <h3>Date & Times</h3><h2>Nov/15 2016 - Nov/25 2016</h2>
+            </div>
+            <div class="hm1">
+                <h3>Ticket Price Range</h3>
+                <h2>$15-30 </h2>
+            </div>
+            <div class="clear"></div>
+            <br>
+            <br>
+            <div>
             <img src="img/poster.jpg" alt="poster">
 
-            <p>sdaaf sdafwsdfa dfadsfasfa</p>
-            <p>sdaaf sdafwsdfa dfadsfasfa</p>
-        </div>
+            <br>
+            <br>
+            <br>
+            <a href="http://nyphil.org/" class=""><h1>Animation Info</h1></a>
+            <h4>The New York Philharmonic, officially the Philharmonic-Symphony Society of New York, Inc., globally known as New York Philharmonic Orchestra (NYPO) or New York Philharmonic-Symphony Orchestra, is a symphony orchestra based in New York City in the United States. It is one of the leading American orchestras popularly referred to as the "Big Five".[8] The Philharmonic's home is David Geffen Hall, formerly known as Avery Fisher Hall until September 2015, located in New York's Lincoln Center.
+            </div>
         <!--
         <p>Here is the common which allow Audience leave their commons</p>
 
