--- a/final/CHAOS/index.html
+++ b/final/CHAOS/index.html
@@ -10,7 +10,13 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/responsive-nav.js"></script>
-    <title>Movie Screenings</title>
+
+    <!--[if lt IE 9]>
+    <![endif]-->
+    <!--[if lt IE 9]>
+     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <title>20-1 Centruy Animation Film Festical</title>
 
 </head>
 
@@ -21,7 +27,7 @@
             <nav class="nav-collapse">
                 <ul>
                     <li>Home</li>
-                    <li>Screenings</li>
+                    <li>Films</li>
                     <li>Directors</li>
                     <li>Schedule</li>
                     <li>Registration</li>
