--- a/final/CHAOS/index.html
+++ b/final/CHAOS/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/responsive-nav.css" media="all">
 
-    <link href="css/screenings.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/responsive-nav.js"></script>
@@ -16,7 +16,7 @@
     <!--[if lt IE 9]>
      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>20-1 Centruy Animation Film Festical</title>
+    <title>20-1 Centruy Animation Film Festival</title>
 
 </head>
 
@@ -48,7 +48,7 @@
 
         <section class="category">
         <h2>Color me French</h2>
- >
+
 
 
             <div class="movie_description">
