--- a/final/index.html
+++ b/final/index.html
@@ -39,7 +39,7 @@
             <h1>Welcom to 1ST 20-1 Animation Festival</h1>
             <br>
             <div class="home">
-                <iframe width="560" height="345" src="https://www.youtube.com/embed/SSv2VRmk5TQ?rel=0&autoplay=1" frameborder="0" allowfullscreen class="video"></iframe>
+<!--                <iframe width="560" height="345" src="https://www.youtube.com/embed/SSv2VRmk5TQ?rel=0&autoplay=1" frameborder="0" allowfullscreen class="video"></iframe>-->
                 <div class="HPN">
                     <h2>Eve's Info</h2>
                     <h3>Join the New York Philharmonic this New Year’s Eve for La Vie Parisienne, a musical love letter to Paris. Featuring the Philharmonic and special guests in some of France’s greatest creations — “La Vie en rose,” Saint-Saëns’s Carnival of the Animals, Offenbach’s Can-Can, and much more — conducted by Alan Gilbert.</h3>
