--- a/final/CHAOS/index.html
+++ b/final/CHAOS/index.html
@@ -36,13 +36,15 @@
             </nav>
             <div id="logo">
                 <h1> Color Me</h1>
-                <h2>Film Festival</h2>
+                <h1>Film Festival</h>
             </div>
+            <br>
+            <br>
             <p> The Color Me Film Festival focuses on movies that use color for symbolism and emotion in the narrative. It is a two day event that engages the senses on many levels. </p>
         </header>
 
 
-        <h3 class="clear">Film Categories</h3>
+        <h3>Film Categories</h3>
 
 
 
