第一次格式整理

--- a/final/CHAOS/index.html
+++ b/final/CHAOS/index.html
@@ -26,17 +26,16 @@
         <header>
             <nav class="nav-collapse">
                 <ul>
-                    <li>Home</li>
-                    <li>Films</li>
-                    <li>Directors</li>
-                    <li>Schedule</li>
-                    <li>Registration</li>
-                    <li>Information</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="AssignmentControllingType/Act.html">Film</a></li>
+                    <li><a href="AssignmentControllingType/Com.html">Director</a></li>
+                    <li><a href="AssignmentControllingType/Rom.html">Schedule</a></li>
+                    <li><a href="AssignmentControllingType/SF.html">Tickets</a></li>
+                    <li><a href="AssignmentControllingType/SF.html">Information</a></li>
                 </ul>
             </nav>
             <div id="logo">
-                <h1> Color Me</h1>
-                <h1>Film Festival</h>
+                <h1> 20-1 Centruy Animation Film Festival</h1>
             </div>
             <br>
             <br>
@@ -49,7 +48,7 @@
 
 
         <section class="category">
-        <h2>Color me French</h2>
+        <h2>Action Films</h2>
 
 
 
